Consistent titles and alignment of control labels in the Issue dialogs (#5086)

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
@@ -150,7 +150,7 @@
   }
 
   .issue-dialog-form {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     background-color: @admin-bg-light-gray;
 
     input-view:not(:last-child) {
@@ -158,7 +158,7 @@
     }
 
     .description-text {
-      margin-top: 15px;
+      margin-top: 10px;
       font-style: italic;
       &.empty {
         display: none !important;
@@ -167,19 +167,29 @@
 
     .issue-approver-selector {
       margin-bottom: 0;
+
+      label {
+        display: none;
+      }
     }
 
     label {
       font-size: 14px;
     }
 
-    .rich-combobox {
+    .rich-combobox:not(.readonly) {
       margin-top: 10px;
     }
   }
 
-  .browse-selection-item .remove {
-    display: none;
+  .browse-selection-item {
+    &:first-child {
+      padding-top: 0px;
+    }
+
+    .remove {
+      display: none;
+    }
   }
 
   .publish-dialog-item-list {
