--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-dialog.less
@@ -33,8 +33,12 @@
     .publish-dialog-item-list {
 
       max-height: none;
+      padding: 0;
 
       .browse-selection-item {
+        &:first-child {
+          padding-top: 0px;
+        }
 
         .status {
           line-height: 32px;
